@@ -1,4 +1,5 @@
 2005-05-29 1.2.22 Jeekay
+* Fix erronous error message in LBANLIST to always display MAX_LBAN_RESULTS
 * Bumped version to 1.2.22
 
 2005-03-31 1.2.21 Jeekay
